--- a/omp/makefile
+++ b/omp/makefile
@@ -1,2 +1,2 @@
-life3d: life3d.o
-	gcc -g -fopenmp life3d.c -o life3d.o utils.c
+life3d: life3d-omp.o
+	gcc -g -fopenmp life3d-omp.c -o life3d-omp.o utils.c
