fix: fixes ompi implementation

--- a/omp/makefile
+++ b/omp/makefile
@@ -1,2 +1,2 @@
-life3d: life3d-omp.o
-	gcc -g -fopenmp life3d-omp.c -o life3d-omp.o utils.c
+life3d: life3d-omp
+	gcc -g -fopenmp life3d-omp.c -o life3d-omp utils.c
