--- a/mpi/makefile
+++ b/mpi/makefile
@@ -1,2 +1,2 @@
-life3d: life3d.o
-	mpicc -O2 -fopenmp -g -o life3d.o life3d.c utils.c
+life3d: life3d
+	mpicc -O2 -fopenmp -g -o life3d life3d.c utils.c
