fix: fixes all make files

--- a/mpi/makefile
+++ b/mpi/makefile
@@ -1,2 +1,2 @@
-life3d: life3d
-	mpicc -O2 -fopenmp -g -o life3d life3d.c utils.c
+life3d-mpi: life3d-mpi.c utils.c
+	mpicc -O2 -fopenmp -g -o life3d-mpi life3d-mpi.c utils.c
